--- a/EECIP/Views/Account/UserProfile.cshtml
+++ b/EECIP/Views/Account/UserProfile.cshtml
@@ -13,10 +13,9 @@
         <div class="col-md-6">
             <section class="panel panel-default ">
                 <div class="panel-heading">
-                    <i class="clip-grid-4"></i>
                     Basic Info
                     <div class="panel-tools">
-                        <a class="btn btn-xs btn-link panel-collapse collapses" href="#">
+                        <a class="btn btn-xs panel-collapse collapses" href="#">
                         </a>
                     </div>
                 </div>
@@ -102,9 +101,9 @@ else
         <div class="col-md-6">
             <section class="panel panel-default ">
                 <div class="panel-heading">
-                    <i class="fa-e clip-grid-4"></i> Professional Info
+                    Professional Info
                     <div class="panel-tools">
-                        <a class="btn btn-xs btn-link panel-collapse collapses" href="#">
+                        <a class="btn btn-xs panel-collapse collapses" href="#">
                         </a>
                     </div>
                 </div>
