--- a/EECIP/Views/Admin/ImportData.cshtml
+++ b/EECIP/Views/Admin/ImportData.cshtml
@@ -13,7 +13,7 @@
 
         <section class="panel panel-default ">
             <div class="panel-heading">
-                <i class="fa-e clip-grid-4"></i> Paste Data Below to Import
+                Paste Data Below to Import
                 <div class="panel-tools">
                     <a class="btn btn-xs btn-link panel-collapse collapses" href="#">
                     </a>
