--- a/EECIP/Views/Admin/RoleEdit.cshtml
+++ b/EECIP/Views/Admin/RoleEdit.cshtml
@@ -9,9 +9,9 @@
     <div class="col-sm-12">
         <section class="panel panel-default">
             <div class="panel-heading">
-                <i class="fa-e clip-grid-4"></i> Role Details
+                Role Details
                 <div class="panel-tools">
-                    <a class="btn btn-xs btn-link panel-collapse collapses" href="#">
+                    <a class="btn btn-xs panel-collapse collapses" href="#">
                     </a>
                 </div>
             </div>
@@ -39,9 +39,9 @@
         <!-- start: USER ROLE ASSIGNMENT -->
         <div class="panel panel-default">
             <div class="panel-heading">
-                <i class="fa-e clip-grid-4"></i> User Role Assignment
+                User Role Assignment
                 <div class="panel-tools">
-                    <a class="btn btn-xs btn-link panel-collapse collapses" href="#">
+                    <a class="btn btn-xs panel-collapse collapses" href="#">
                     </a>
                 </div>
             </div>
