--- a/EECIP/Views/Dashboard/Index.cshtml
+++ b/EECIP/Views/Dashboard/Index.cshtml
@@ -2,9 +2,9 @@
 @model EECIP.Models.vmDashboardIndex
 <section class="panel panel-default ">
     <div class="panel-heading">
-        <i class="fa-e clip-grid-4"></i> Badge Progress
+        Badge Progress
         <div class="panel-tools">
-            <a class="btn btn-xs btn-link panel-collapse collapses" href="#">
+            <a class="btn btn-xs panel-collapse collapses" href="#">
             </a>
         </div>
     </div>
