--- a/EECIP/Views/Dashboard/ProjectDetails.cshtml
+++ b/EECIP/Views/Dashboard/ProjectDetails.cshtml
@@ -13,9 +13,9 @@
     <div class="col-sm-6">
         <section class="panel panel-default">
             <div class="panel-heading">
-                <i class="fa-e clip-grid-4"></i> Project Overview
+                Project Overview
                 <div class="panel-tools">
-                    <a class="btn btn-xs btn-link panel-collapse collapses" href="#">
+                    <a class="btn btn-xs panel-collapse collapses" href="#">
                     </a>
                 </div>
             </div>
@@ -96,9 +96,9 @@
     <div class="col-sm-6">
         <section class="panel panel-default">
             <div class="panel-heading">
-                <i class="fa-e clip-grid-4"></i> Project Attributes
+                Project Attributes
                 <div class="panel-tools">
-                    <a class="btn btn-xs btn-link panel-collapse collapses" href="#">
+                    <a class="btn btn-xs panel-collapse collapses" href="#">
                     </a>
                 </div>
             </div>
