--- a/EECIP/Views/Dashboard/Projects.cshtml
+++ b/EECIP/Views/Dashboard/Projects.cshtml
@@ -21,9 +21,9 @@
     <div class="col-sm-12">
         <section class="panel panel-default">
             <div class="panel-heading">
-                <i class="fa-e clip-grid-4"></i> Projects
+                Projects
                 <div class="panel-tools">
-                    <a class="btn btn-xs btn-link panel-collapse collapses" href="#">
+                    <a class="btn btn-xs panel-collapse collapses" href="#">
                     </a>
                 </div>
             </div>
