--- a/EECIP/Views/Admin/RefAgencyEdit.cshtml
+++ b/EECIP/Views/Admin/RefAgencyEdit.cshtml
@@ -9,9 +9,9 @@
     <div class="col-sm-12">
         <section class="panel panel-default">
             <div class="panel-heading">
-                <i class="fa-e clip-grid-4"></i> Agency Details
+                Agency Details
                 <div class="panel-tools">
-                    <a class="btn btn-xs btn-link panel-collapse collapses" href="#">
+                    <a class="btn btn-xs panel-collapse collapses" href="#">
                     </a>
                 </div>
             </div>
@@ -68,9 +68,9 @@
     <div class="col-sm-6">
         <div class="panel panel-default">
             <div class="panel-heading">
-                <i class="fa-e clip-grid-4"></i> Email Rules
+                Email Rules
                 <div class="panel-tools">
-                    <a class="btn btn-xs btn-link panel-collapse collapses" href="#">
+                    <a class="btn btn-xs panel-collapse collapses" href="#">
                     </a>
                 </div>
             </div>
