--- a/EECIP/Views/Dashboard/Agency.cshtml
+++ b/EECIP/Views/Dashboard/Agency.cshtml
@@ -9,7 +9,7 @@
     <div class="col-sm-6">
         <section class="panel panel-default">
             <div class="panel-heading">
-                <i class="fa-e clip-grid-4"></i> Agency Details
+                Agency Details
                 <div class="panel-tools">
                     <a class="btn btn-xs btn-link panel-collapse collapses" href="#">
                     </a>
@@ -83,9 +83,9 @@
     <div class="col-sm-6">
         <section class="panel panel-default">
             <div class="panel-heading">
-                <i class="fa-e clip-grid-4"></i> Agency Users
+                Agency Users
                 <div class="panel-tools">
-                    <a class="btn btn-xs btn-link panel-collapse collapses" href="#">
+                    <a class="btn btn-xs panel-collapse collapses" href="#">
                     </a>
                 </div>
             </div>
@@ -153,9 +153,9 @@
     <div class="col-sm-12">
         <section class="panel panel-default">
             <div class="panel-heading">
-                <i class="fa-e clip-grid-4"></i> Enterprise Services
+                Enterprise Services
                 <div class="panel-tools">
-                    <a class="btn btn-xs btn-link panel-collapse collapses" href="#">
+                    <a class="btn btn-xs panel-collapse collapses" href="#">
                     </a>
                 </div>
             </div>
