--- a/EECIP/Views/Dashboard/AgencyCard.cshtml
+++ b/EECIP/Views/Dashboard/AgencyCard.cshtml
@@ -1,48 +1,138 @@
-﻿
-@model EECIP.Models.vmDashboardAgencyCard
+﻿@model EECIP.Models.vmDashboardAgencyCard
 @{
     ViewBag.Title = Model.agency.ORG_NAME;
     ViewBag.ShowBack = true;
 }
 
 <div class="row">
-    <div class="col-sm-3">
+    <div class="col-sm-4">
         <div class="user-left">
             <div class="center" style="padding-bottom:20px">
                 <div class="user-image">
-                    <img src="@Url.Content(String.Format("~/Content/Images/Agencies/{0}.png", Model.agency.ORG_ABBR))" alt="logo" width="200px" />
+                    <img src="@Url.Content(String.Format("~/Content/Images/Agencies/{0}.png",  Model.agency.ORG_ABBR))" alt="logo" onerror="this.src='../Content/Images/Agencies/0.png'" style="width:200px" />
                 </div>
                 <h4>@Html.Raw(Model.agency.ORG_ABBR)</h4>
-            </div>
-        </div>
-    </div>
-    <div class="col-sm-4">
-        <div class="well">
-            <div class="row">
                 State: @Html.Raw(Model.agency.STATE_CD)
-            </div>
-            <div class="row">
+                <br/>
                 EPA Region: @Html.Raw(Model.agency.EPA_REGION)
             </div>
         </div>
     </div>
-    <div class="col-sm-4">
-        <h3>Tech Details</h3>
+    <div class="col-sm-8">
+
+        <section class="panel panel-default">
+            <div class="panel-heading">
+                Tech Details
+                <div class="panel-tools">
+                    <a class="btn btn-xs panel-collapse collapses" href="#">
+                    </a>
+                </div>
+            </div>
+            <div class="panel-body">
+
+                <table id="user" class="table table-bordered table-striped" style="clear: both">
+                    <tbody>
+                        <tr>
+                            <td class="column-left" style="width:50%">Application Development Framework</td>
+                            <td class="column-right">
+                                temp
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Primary Database Platform</td>
+                            <td>
+                                temp
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Using/considering cloud applications?</td>
+                            <td>
+                                temp
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Internal/External APIs and/or an Agency Strategy for APIs?</td>
+                            <td>
+                                temp
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+
+
+            </div>
+        </section>
+
+
+
     </div>
 </div>
 
-<h3>Agency Members</h3>
-<div class="row">
-</div>
-
-<h3>Enterprise Services</h3>
 <div class="row">
     <div class="col-sm-12">
         <section class="panel panel-default">
             <div class="panel-heading">
-                <i class="fa-e clip-grid-4"></i> Enterprise Services
+                Members
                 <div class="panel-tools">
-                    <a class="btn btn-xs btn-link panel-collapse collapses" href="#">
+                    <a class="btn btn-xs panel-collapse collapses" href="#">
+                    </a>
+                </div>
+            </div>
+            <div class="panel-body">
+                @foreach (var item in Model.users)
+                {
+                    <div class="col-lg-3 col-sm-6">
+                        <div class="circle-tile">
+                            <a href="@Url.Action("UserCard", "Dashboard", new { strid = item.USER_IDX })">
+                                <div class="circle-tile-heading" style="background-image:url(/Content/Images/Users/@(item.USER_IDX).png)">
+                                </div>
+                            </a>
+                            <div class="circle-tile-content dark-blue">
+                                <div class="circle-tile-number text-faded">
+                                    @item.FNAME @item.LNAME
+                                </div>
+                                <div class="circle-tile-title text-faded">
+                                    @item.JOB_TITLE
+                                </div>
+                                <div class="circle-tile-buttons text-faded">
+                                    <a href="tel:@(item.PHONE)" class="btn btn-primary">
+                                        <i class="clip-phone"></i>
+                                    </a>
+                                    <a href="mailto:@(item.EMAIL)" class="btn btn-primary">
+                                        <i class="glyphicon glyphicon-envelope"></i>
+                                    </a>
+                                    <a href="https://www.linkedin.com/in/@(item.LINKEDIN)" class="btn btn-primary" target="_blank">
+                                        <i class="clip-linkedin"></i>
+                                    </a>
+                                </div>
+                                @*@if (item.Document.Tags != null)
+                                {
+                                    <div style="padding-bottom:10px; ">
+                                        @foreach (string tag in item.Document.Tags)
+                                        {
+                                            <span class="select2-selection__choice" style="font-size:12px !important">@Html.DisplayFor(modelItem => tag)</span>
+                                        }
+
+                                    </div>
+                                }*@
+                                <a href="@Url.Action("UserCard", "Dashboard", new { strid = item.USER_IDX })" class="circle-tile-footer">More Info <i class="fa fa-chevron-circle-right"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                }
+            </div>
+        </section>
+    </div>
+
+</div>
+
+<div class="row">
+    <div class="col-sm-12">
+        <section class="panel panel-default">
+            <div class="panel-heading">
+                Enterprise Services
+                <div class="panel-tools">
+                    <a class="btn btn-xs panel-collapse collapses" href="#">
                     </a>
                 </div>
             </div>
@@ -84,14 +174,13 @@
     </div>
 </div>
 
-<h3>Projects</h3>
 <div class="row">
     <div class="col-sm-12">
         <section class="panel panel-default">
             <div class="panel-heading">
-                <i class="fa-e clip-grid-4"></i> Projects
+                Projects
                 <div class="panel-tools">
-                    <a class="btn btn-xs btn-link panel-collapse collapses" href="#">
+                    <a class="btn btn-xs panel-collapse collapses" href="#">
                     </a>
                 </div>
             </div>
@@ -120,7 +209,7 @@
                                     @Html.DisplayFor(modelItem => item.PROJ_DESC)
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.T_OE_REF_TAGS.TAG_NAME)
+                                    @*@Html.DisplayFor(modelItem => item.T_OE_REF_TAGS.TAG_NAME)*@
                                 </td>
                                 <td>
                                     @Html.DisplayFor(modelItem => item.START_YEAR)
